--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@mui/material": "^6.1.3",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.22.0",
+    "@stripe/react-stripe-js": "^3.0.0",
+    "@stripe/stripe-js": "^5.2.0",
     "@types/bcrypt": "^5.0.2",
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
@@ -25,7 +27,8 @@
     "react-dom": "^18",
     "react-hook-form": "^7.53.2",
     "react-hot-toast": "^2.4.1",
-    "react-icons": "^5.3.0"
+    "react-icons": "^5.3.0",
+    "stripe": "^17.4.0"
   },
   "devDependencies": {
     "@types/node": "^20",
