--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.7.4",
@@ -22,12 +23,15 @@
     "@types/bcrypt": "^5.0.2",
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
+    "chart.js": "^4.4.6",
     "firebase": "^11.0.2",
     "micro": "^10.0.1",
     "moment": "^2.30.1",
     "next": "14.2.15",
     "next-auth": "^4.24.10",
+    "query-string": "^9.1.1",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "react-dropzone": "^14.3.5",
     "react-hook-form": "^7.53.2",
