--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/bcrypt": "^5.0.2",
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "chart.js": "^4.4.6",
     "firebase": "^11.0.2",
     "micro": "^10.0.1",
